[package]
name = "proust"
version = "0.1.0"
authors = ["Sumera Priyadarsini <sylphrenadin@gmail.com>"]
repository = "https://github.com/sylfrena/proust"
description = "A library for fetching process information in Linux"
keywords = ["procfs", "proc", "process", "Linux", "pid"]
exclude = [
  ".gitignore",
  ".github",
]

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[[bin]]
#name = "proust"
#path = "src/main.rs"

[lib]
name = "proust"
path = "src/lib/lib.rs"

[dependencies]
